@@ -1,6 +1,7 @@
 [+] Download complete notifications.
 [+] Magnet links support.
 [+] IP filter enabling/disabling.
+[+] Now Publisher URL is also gotten from torrent's 'comment' field.
 [*] Fixed a bug, due to which "Copy when finished to" option copied
 unnecessary files (downloaded by libtorrent, but marked as "Do not download"
 by user.
